--- a/agent-ot/exporter/build.gradle
+++ b/agent-ot/exporter/build.gradle
@@ -3,6 +3,9 @@ plugins {
 }
 
 apply from: "$buildScriptsDir/common-java.gradle"
+apply from: "$buildScriptsDir/publishing.gradle"
+
+archivesBaseName = 'applicationinsights-agent-ot-exporter'
 
 dependencies {
     compile 'io.opentelemetry:opentelemetry-sdk:0.2.0'
@@ -13,3 +16,10 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+// region Publishing properties
+
+projectPomName = project.msftAppInsights + " Agent Exporter"
+projectPomDescription = "This is the agent exporter of " + project.msftAppInsightsJavaSdk
+
+// endregion Publishing properties
